@@ -775,6 +775,17 @@ end sub
 
 
 
+Sub dumpdata(m as midiEvent ptr)
+	dim d$, i as integer
+	
+	for i = 0 to m->extralen - 1
+		d$ += hex$(m->extradata[i]) + " "
+	next
+	
+	debug d$
+	
+end sub
+
 
 
 Sub PlayBackThread(dummy as integer)
@@ -909,48 +920,57 @@ sysex:
 					global(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) -= BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2))
 				#ENDIF
 				case &H10 'if tag
+					p+=1
 					'debug "If Tag # " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p)))
+					'dumpdata(curevent)
 					if readbit (tag(), 0, BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) then
 						p += 2
 						goto sysex
 					end if
 				case &H11 'if variable
+					p+=1
 					'debug "If variable # " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) + " = " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)))
 					if global(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) = BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)) then
 						p += 4
 						goto sysex
 					end if
 				case &H12 'if variable >
+					p+=1
 					'debug "If variable # " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) + " > " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)))
 					if global(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) > BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)) then
 						p += 4
 						goto sysex
 					end if
 				case &H13 'if variable <
+					p+=1
 					'debug "If variable # " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) + " < " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)))
 					if global(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) < BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)) then
 						p += 4
 						goto sysex
 					end if
 				case &H20 'if !tag
+					p+=1
 					'debug "If Tag # " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p)))
 					if not readbit (tag(), 0, BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) then
 						p += 2
 						goto sysex
 					end if
 				case &H21 'if !variable
+					p+=1
 					'debug "If variable # " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) + " = " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)))
 					if global(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) <> BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)) then
 						p += 4
 						goto sysex
 					end if
 				case &H22 'if !variable >
+					p+=1
 					'debug "If variable # " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) + " > " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)))
 					if global(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) <= BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)) then
 						p += 4
 						goto sysex
 					end if
 				case &H23 'if !variable <
+					p+=1
 					'debug "If variable # " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) + " < " + str(BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)))
 					if global(BE_SHORT(*Cptr(short ptr, curevent->extradata + p))) >= BE_SHORT(*Cptr(short ptr, curevent->extradata + p + 2)) then
 						p += 4
@@ -1030,3 +1050,4 @@ sub sysex_callback (byval d as UByte ptr, byval l as Uinteger)
 	debug("sysex")
 
 end sub
+
