@@ -1356,6 +1356,27 @@ SELECT CASE id
  CASE 188'--setmusicvolume
   fmvol = bound(retvals(0), 0, 255) \ 16
   setfmvol fmvol
+ CASE 189'--get formation song
+  fh = FREEFILE
+  IF retvals(0) >= 0 AND retvals(0) < gen(genMaxFormation) THEN
+   OPEN game$ + ".FOR" FOR BINARY AS #fh
+   'GET #fh,clng(retvals(0)) * 80 + 66,scriptret
+   scriptret = readshort(fh,clng(retvals(0)) * 80 + 65)
+   CLOSE #fh
+  ELSE
+   scriptret = -1
+  END IF
+ CASE 190'--set formation song
+  fh = FREEFILE
+  IF retvals(0) >= 0 AND retvals(0) < gen(genMaxFormation) AND retvals(1) >= 0 AND retvals(1) <= gen(genMaxSong) THEN
+   OPEN game$ + ".FOR" FOR BINARY AS #fh
+   'GET #fh,clng(retvals(0)) * 80 + 66,scriptret
+   WriteShort(fh,clng(retvals(0)) * 80 + 65,retvals(1))
+   setbit lumpmod(),0,1,1
+   CLOSE #fh
+  ELSE
+   scriptret = -1
+  END IF
  CASE 200'--system hour
   scriptret = INT(TIMER / 3600)
  CASE 201'--system minute
